--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,10 +1,4 @@
-j2ee.platform.classpath=${j2ee.server.home}/modules/endorsed/javax.annotation-api.jar:${j2ee.server.home}/modules/endorsed/jaxb-api.jar:${j2ee.server.home}/modules/endorsed/webservices-api-osgi.jar:${j2ee.server.home}/modules/bean-validator.jar:${j2ee.server.home}/modules/cdi-api.jar:${j2ee.server.home}/modules/javax.batch-api.jar:${j2ee.server.home}/modules/javax.ejb-api.jar:${j2ee.server.home}/modules/javax.el.jar:${j2ee.server.home}/modules/javax.enterprise.concurrent-api.jar:${j2ee.server.home}/modules/javax.enterprise.concurrent.jar:${j2ee.server.home}/modules/javax.enterprise.deploy-api.jar:${j2ee.server.home}/modules/javax.faces.jar:${j2ee.server.home}/modules/javax.inject.jar:${j2ee.server.home}/modules/javax.interceptor-api.jar:${j2ee.server.home}/modules/javax.jms-api.jar:${j2ee.server.home}/modules/javax.json.jar:${j2ee.server.home}/modules/javax.mail.jar:${j2ee.server.home}/modules/javax.management.j2ee-api.jar:${j2ee.server.home}/modules/javax.persistence.jar:${j2ee.server.home}/modules/javax.resource-api.jar:${j2ee.server.home}/modules/javax.security.auth.message-api.jar:${j2ee.server.home}/modules/javax.security.jacc-api.jar:${j2ee.server.home}/modules/javax.servlet-api.jar:${j2ee.server.home}/modules/javax.servlet.jsp-api.jar:${j2ee.server.home}/modules/javax.servlet.jsp.jar:${j2ee.server.home}/modules/javax.servlet.jsp.jstl-api.jar:${j2ee.server.home}/modules/javax.servlet.jsp.jstl.jar:${j2ee.server.home}/modules/javax.transaction-api.jar:${j2ee.server.home}/modules/javax.websocket-api.jar:${j2ee.server.home}/modules/javax.ws.rs-api.jar:${j2ee.server.home}/modules/javax.xml.registry-api.jar:${j2ee.server.home}/modules/javax.xml.rpc-api.jar:${j2ee.server.home}/modules/jaxb-osgi.jar:${j2ee.server.home}/modules/webservices-osgi.jar:${j2ee.server.home}/modules/weld-osgi-bundle.jar:${j2ee.server.middleware}/mq/lib/jaxm-api.jar
-j2ee.platform.embeddableejb.classpath=${j2ee.server.home}/lib/embedded/glassfish-embedded-static-shell.jar
-j2ee.platform.wscompile.classpath=${j2ee.server.home}/modules/webservices-osgi.jar
-j2ee.platform.wsgen.classpath=${j2ee.server.home}/modules/webservices-osgi.jar:${j2ee.server.home}/modules/endorsed/webservices-api-osgi.jar:${j2ee.server.home}/modules/jaxb-osgi.jar:${j2ee.server.home}/modules/endorsed/jaxb-api.jar
-j2ee.platform.wsimport.classpath=${j2ee.server.home}/modules/webservices-osgi.jar:${j2ee.server.home}/modules/endorsed/webservices-api-osgi.jar:${j2ee.server.home}/modules/jaxb-osgi.jar:${j2ee.server.home}/modules/endorsed/jaxb-api.jar
-j2ee.platform.wsit.classpath=
-#Tue Aug 29 00:18:57 GMT 2017
+#Thu Sep 14 11:21:57 GMT 2017
 javadoc.splitindex=true
 lib.dir=${web.docbase.dir}/WEB-INF/lib
 build.classes.excludes=**/*.java,**/*.form
@@ -17,13 +11,18 @@ resource.dir=setup
 build.web.excludes=${build.classes.excludes}
 war.ear.name=Kafari.war
 j2ee.compile.on.save=true
+j2ee.platform.classpath=${j2ee.server.home}/modules/endorsed/javax.annotation-api.jar\:${j2ee.server.home}/modules/endorsed/jaxb-api.jar\:${j2ee.server.home}/modules/endorsed/webservices-api-osgi.jar\:${j2ee.server.home}/modules/bean-validator.jar\:${j2ee.server.home}/modules/cdi-api.jar\:${j2ee.server.home}/modules/javax.batch-api.jar\:${j2ee.server.home}/modules/javax.ejb-api.jar\:${j2ee.server.home}/modules/javax.el.jar\:${j2ee.server.home}/modules/javax.enterprise.concurrent-api.jar\:${j2ee.server.home}/modules/javax.enterprise.concurrent.jar\:${j2ee.server.home}/modules/javax.enterprise.deploy-api.jar\:${j2ee.server.home}/modules/javax.faces.jar\:${j2ee.server.home}/modules/javax.inject.jar\:${j2ee.server.home}/modules/javax.interceptor-api.jar\:${j2ee.server.home}/modules/javax.jms-api.jar\:${j2ee.server.home}/modules/javax.json.jar\:${j2ee.server.home}/modules/javax.mail.jar\:${j2ee.server.home}/modules/javax.management.j2ee-api.jar\:${j2ee.server.home}/modules/javax.persistence.jar\:${j2ee.server.home}/modules/javax.resource-api.jar\:${j2ee.server.home}/modules/javax.security.auth.message-api.jar\:${j2ee.server.home}/modules/javax.security.jacc-api.jar\:${j2ee.server.home}/modules/javax.servlet-api.jar\:${j2ee.server.home}/modules/javax.servlet.jsp-api.jar\:${j2ee.server.home}/modules/javax.servlet.jsp.jar\:${j2ee.server.home}/modules/javax.servlet.jsp.jstl-api.jar\:${j2ee.server.home}/modules/javax.servlet.jsp.jstl.jar\:${j2ee.server.home}/modules/javax.transaction-api.jar\:${j2ee.server.home}/modules/javax.websocket-api.jar\:${j2ee.server.home}/modules/javax.ws.rs-api.jar\:${j2ee.server.home}/modules/javax.xml.registry-api.jar\:${j2ee.server.home}/modules/javax.xml.rpc-api.jar\:${j2ee.server.home}/modules/jaxb-osgi.jar\:${j2ee.server.home}/modules/webservices-osgi.jar\:${j2ee.server.home}/modules/weld-osgi-bundle.jar\:${j2ee.server.middleware}/mq/lib/jaxm-api.jar
 debug.test.classpath=${run.test.classpath}
 build.dir=build
+j2ee.platform.wsgen.classpath=${j2ee.server.home}/modules/webservices-osgi.jar\:${j2ee.server.home}/modules/endorsed/webservices-api-osgi.jar\:${j2ee.server.home}/modules/jaxb-osgi.jar\:${j2ee.server.home}/modules/endorsed/jaxb-api.jar
 javac.deprecation=false
 persistence.xml.dir=${conf.dir}
+j2ee.platform.wsit.classpath=
 j2ee.copy.static.files.on.save=true
+j2ee.platform.embeddableejb.classpath=${j2ee.server.home}/lib/embedded/glassfish-embedded-static-shell.jar
+j2ee.platform.wscompile.classpath=${j2ee.server.home}/modules/webservices-osgi.jar
 test.src.dir=test
-junit.selected.version=4
+junit.selected.version=3
 includes=**
 jar.compress=false
 annotation.processing.processors.list=
@@ -49,12 +48,13 @@ javadoc.additionalparam=
 javac.classpath=${libs.spring-framework300.classpath}
 javadoc.noindex=false
 webinf.dir=web/WEB-INF
+j2ee.platform.wsimport.classpath=${j2ee.server.home}/modules/webservices-osgi.jar\:${j2ee.server.home}/modules/endorsed/webservices-api-osgi.jar\:${j2ee.server.home}/modules/jaxb-osgi.jar\:${j2ee.server.home}/modules/endorsed/jaxb-api.jar
 annotation.processing.enabled.in.editor=true
 javadoc.private=false
 javadoc.encoding=${source.encoding}
 build.test.classes.dir=${build.dir}/test/classes
-web.docbase.dir=web
 javac.compilerargs=
+web.docbase.dir=web
 source.encoding=UTF-8
 dist.ear.war=${dist.dir}/${war.ear.name}
 j2ee.server.type=gfv3ee6
@@ -71,12 +71,7 @@ build.web.dir=${build.dir}/web
 javadoc.nonavbar=false
 war.name=Kafari.war
 javadoc.windowtitle=
-javac.test.classpath=\
-    ${javac.classpath}:\
-    ${build.classes.dir}:\
-    ${libs.junit.classpath}:\
-    ${libs.junit_4.classpath}:\
-    ${libs.hamcrest.classpath}
+javac.test.classpath=${javac.classpath}\:${build.classes.dir}\:\:${libs.junit_4.classpath}\:${libs.hamcrest.classpath}
 src.dir=${source.root}/java
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
 debug.classpath=${build.classes.dir}\:${javac.classpath}
